trying to stop the text from getting cut off

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,5 @@
 header {
+  width:300px;
   top: 0px;
   bottom: 75px;
   overflow-y:auto;
